Use Java Platform for Base64